fixed the spacing inside of the sides dropdown menu, shadows looks better

--- a/public/css/sides.css
+++ b/public/css/sides.css
@@ -18,7 +18,7 @@
 }
 
 
-#sides-item {
+.sides-item {
   display: flex;
   flex-direction: column;
   margin-bottom: 0px;
@@ -29,7 +29,7 @@
   min-height: 40px;
   padding: 15px;
   background: #00bcd4;
-  box-shadow: inset 0 0 10px rgba(34,34,34,0.55);
+  box-shadow: inset 0px 3px 8px rgba(34,34,34,0.55);
 
 }
 
@@ -77,12 +77,17 @@ div.form-order {
 }
 
 .option {
+  display: flex;
+  flex-direction: row;
+  justify-content: center;
+  align-items: center;
   font-size: 18px;
   font-weight: 400;
+  margin-bottom: 0px;
 }
 
 .sides-title {
-  padding-bottom: 7px;
+  padding: 0px 7px;
 }
 .sides-price {
   font-size: 14px;
@@ -102,7 +107,7 @@ input[type="checkbox"] {
   align-items: center;
   justify-content: space-between;
   background: #ffffff;
-  box-shadow: 0 0 8px 0px rgba(34,34,34,0.55);
+  box-shadow: inset 0px 0px 0px 0px rgba(34,34,34,0.55);
   height: 60px;
   width: 100%;
   padding: 10px;
@@ -111,4 +116,8 @@ input[type="checkbox"] {
 
 .menu-item-button-cancel {
   background-color: darkgray;
+}
+
+.checkbox {
+  display: flex;
 }
